--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
 		"@babel/runtime": "^7.16.3",
 		"babel-eslint": "^10.1.0",
 		"babel-loader": "^8.2.3",
-		"babel-plugin-transform-class-properties": "^6.24.1",
+		"babel-plugin-transform-class-properties": "^6.10.2",
 		"bc-console": "0.0.2",
 		"css-loader": "^6.5.1",
 		"dotenv-webpack": "^7.0.3",
@@ -46,17 +46,17 @@
 		"eslint-plugin-react": "^7.27.1",
 		"eslint-webpack-plugin": "^3.1.1",
 		"file-loader": "^6.2.0",
-		"gh-pages": "^3.2.3",
+		"gh-pages": "^6.1.1",
 		"html-loader": "^3.0.1",
 		"html-webpack-plugin": "^5.5.0",
 		"parse-github-url": "^1.0.2",
 		"prettier": "^2.5.1",
 		"remote-origin-url": "^2.0.0",
 		"style-loader": "^3.3.1",
-		"webpack": "^5.65.0",
-		"webpack-cli": "^4.9.1",
+		"webpack": "^5.91.0",
+		"webpack-cli": "^4.10.0",
 		"webpack-dev-server": "^4.6.0",
-		"webpack-merge": "^5.8.0"
+		"webpack-merge": "^5.10.0"
 	},
 	"babel": {
 		"presets": [
@@ -74,12 +74,12 @@
 		]
 	},
 	"dependencies": {
-		"react-router-dom": "^5.2.0",
 		"prop-types": "^15.7.2",
 		"query-string": "^7.0.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-polyfills": "0.0.1",
-		"react-router": "^6.0.2"
+		"react-router": "^6.0.2",
+		"react-router-dom": "^5.2.0"
 	}
 }
